test: align tests with current core fact APIs